Add presence tracking and encrypted attachment support